--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
     </div>
 
+    <!-- scrollreveal link -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <!-- custom js link -->
     <script src="script.js"></script>
   </body>
