Co-authored-by: Arees <ArisMunandar13@users.noreply.github.com> Co-authored-by: MuhammadAlfarizi7945 <MuhammadAlfarizi7945@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">MyD-Big</a>
+      <a href="#" class="logo">Ambatukam</a>
 
       <ul class="navlist">
         <li><a href="#">home</a></li>
