--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">Ambatukam</a>
+      <a href="#" class="logo">Aku ganteng</a>
 
       <ul class="navlist">
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
-        <li><a href="#">clans</a></li>
-        <li><a href="#">townhall</a></li>
-        <li><a href="#">troops</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+
         <li><a href="#">contacs</a></li>
       </ul>
 
