--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
     </div>
 
+    <div class="content">
+      <button id="showInfo">Show Info</button>
+      <div class="info">
+        <!-- Additional information here -->
+      </div>
+    </div>
+
     <!-- scrollreveal link -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
